css/style.css
#top_container {
    width: 100%;
    height: 765px;
    position: relative;
    max-width: 900px;
    min-width: 900px;
}
#content_container,
#gallery_container {
    width: 848px;
    height: 100%;
    position: relative;
    border: 2px solid rgba(0, 82, 16, .2);
    padding: 12px;
    margin: 12px;
}
#top_announcement,
#top_slideshow,
#top_image {
    width: 100%;
    height: 100%;
    position: absolute;
    width: 100%;
    height: 600px;
    font-family: "Dancing Script", "Nanum Brush Script";
    font-size: 50px;
    font-weight: 800;
    vertical-align: middle;
}
/*#top_image {*/
/*    background-image: url('../gallery/900w/IMG_1529.jpg');*/
/*    background-size: cover;*/
/*}*/
#top_slideshow > div{
    position: absolute;
}
#top_slideshow div img {
    margin-left: auto;
    margin-right: auto;
    display: block;
}
#top_announcement {
    z-index: 10;
}
#top_anouncement div {
    display: table-cell;
    vertical-align: bottom;
}

#top_announcement h2,
#top_announcement h4 {
    color: #c3c3c3;
    margin-top: 0;
    font-size: 1em;
    line-height: 1em;
    text-shadow: -0.5px 0 black, 0 0.5px #005210, 0.5px 0 #005210, 0 -0.5px #005210;
    margin-block-start: 0.2em;
    margin-block-end: 0.2em;
    text-align: center;
}
#top_announcement h4 {
    padding-bottom: 0.7em;
}

#countdown {
    min-width: 100%;
    position: absolute;
    bottom: 0;
}

#countdown ul {
    width: 50%;
    margin: 0 auto;
}

#countdown ul li {
    display: inline-flex;
    font-size: 0.7em;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    width: 4rem;
}

#countdown ul li h2,
#countdown ul li h4 {
    font-family: 'Dancing Script', cursive;
    font-size: 1em;
    color: white;
    margin-top: 0;
    line-height: 1em;
    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
    margin-block-start: 0.1em;
    margin-block-end: 0.1em;
}

.announcement h4,
.announcement h5,
.announcement h6 {
    font-family: "Nanum Gothic";
    margin-block-start: 0.7em;
    margin-block-end: 0.1em;
}
.announcement h2 {
    font-family: "Nanum Brush Script";
    text-align: center;
    color: #005210;
    font-size: 41px;
    margin-block-start: 0.7em;
    margin-block-end: 0.5em;
}

.dancing_script {
    font-family: 'Dancing Script';
}

.point_color {
    color: #9e9e9e;
}

.hes-gallery{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-gap: 10px;
    padding: 10px;
}

.hes-gallery img {
    width: 100%;
    height: 270px;
    object-fit: cover;
    transition: 0.3s;
    cursor: pointer;
}

.hes-gallery img:hover
{
    transform: scale(1.04);
    box-shadow: 2px 2px 6px #555;
}

